# ingit

./: .gitignore  .pylintrc  .travis.yml  Dockerfile  Jenkinsfile  MANIFEST.in  NOTICE  README.rst  appveyor.yml  mypy.config  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_test.txt  setup.cfg  setup.py  setup_boilerplate.py  test_requirements.txt
.build/: install_pyenv_python.sh
.github/: dependabot.yml
.github/workflow/: python.yml
.github/workflows/: python.yml
ingit/: __init__.py  __main__.py  _logging.py  _version.py  action_progress.py  cli_boilerplate.py  config_boilerplate.py  fetch_flags.py  json_config.py  logging_boilerplate.py  main.py  project.py  push_flags.py  repo_data.py  runtime.py  runtime_interface.py
test/: __init__.py  git_repo_tests.py  test_action_progress.py  test_cli_boilerplate.py  test_git_commands.py  test_ingit_commands.py  test_json_config.py  test_logging.py  test_main.py  test_project.py  test_repo_data.py  test_runtime.py  test_runtime_interface.py  test_setup.py  test_with_git_repo.py
test/examples/repos_config/: example1.json  example2.json  example_initial.json  example_paths.json
test/examples/repos_config/repos.d/: example_extra.json
test/examples/runtime_config/: example1.json  example2.json  example_bad.json  example_initial.json  example_names.json
